# Solana-Memecoin-Sniper-Dashboard-PoC-01

./: .gitignore  GUIDE_ENTRETIEN.md  README.md  railway.toml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/api/: dexscreener.ts
frontend/src/: App.tsx  index.css  themes.ts
frontend/src/components/: JitoPanel.tsx  LogPanel.tsx  NetworkBar.tsx  StatsHeader.tsx  ThemeSwitcher.tsx  TokenDetail.tsx  TokenRow.tsx
frontend/src/lib/: api.ts  dexscreener.ts  networkStats.ts  riskScore.ts  types.ts
