[package]
name    = "sniper-backend"
version = "0.1.0"
edition = "2021"

# ──────────────────────────────────────────────────────────────
# DÉPENDANCES
# Chaque crate a un rôle précis dans l'architecture :
# ──────────────────────────────────────────────────────────────
[dependencies]

# ● Framework web asynchrone — gère les routes HTTP, le middleware, etc.
actix-web  = "4"

# ● Middleware CORS pour actix-web — autorise le front React (port 3000)
#   à appeler notre API (port 8080) malgré la Same-Origin Policy du navigateur.
actix-cors = "0.7"

# ● Runtime asynchrone — "l'OS" de nos tâches async.
#   features = ["full"] active le scheduler multi-thread, les timers, les canaux, etc.
tokio = { version = "1", features = ["full"] }

# ● Client HTTP non-bloquant — pour interroger l'API DexScreener.
#   features = ["json"] active la désérialisation JSON intégrée.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ● (Dé)sérialisation JSON : transforme struct Rust <-> JSON
#   features = ["derive"] active les macros #[derive(Serialize, Deserialize)]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ● Timestamps UTC pour les logs et la détection de tokens récents
chrono = { version = "0.4", features = ["serde"] }

# ● Génération d'UUID v4 (identifiants uniques pour chaque opportunité/log)
uuid = { version = "1", features = ["v4"] }

# ● Logging structuré : macros info!(), error!(), warn!()
log        = "0.4"
env_logger = "0.11"
